force-app/main/default/objects/Public_Holiday__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Public Holidays</relationshipLabel>
    <relationshipName>Public_Holidays</relationshipName>
    <type>Lookup</type>
</CustomField>