force-app/main/default/objects/Public_Holiday__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipLabel>Public Holidays</relationshipLabel>
    <relationshipName>Public_Holidays</relationshipName>
    <type>Lookup</type>
</CustomField>