force-app/main/default/objects/Public_Holiday__c/fields/Public_Holiday_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Holiday_Date__c</fullName>
    <label>Public Holiday Date</label>
    <type>Date</type>
</CustomField>