force-app/main/default/objects/Public_Holiday__c/validationRules/Canot_change_to_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Canot_change_to_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Status__c)
,&apos;Execution Completed&apos;
)
,ISPICKVAL(Status__c,&apos;Draft&apos;) 
)</errorConditionFormula>
    <errorMessage>Action not permitted</errorMessage>
</ValidationRule>