force-app/main/default/objects/Public_Holiday__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Organisation_Status__c</columns>
    <columns>Organisation__c</columns>
    <columns>Public_Holiday_Date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Execution_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>