force-app/main/default/objects/Public_Holiday__c/listViews/Singapore_public_holidays.listView-meta.xml
<ListView>
    <fullName>Singapore_public_holidays</fullName>
    <columns>Public_Holiday_Date__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Country__c</columns>
    <columns>Execution_Date__c</columns>
    <columns>Organisation__c</columns>
    <columns>Organisation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>SG</value>
    </filters>
    <label>Singapore public holidays</label>
</ListView>